--- a/tp3_linux/Debug/makefile
+++ b/tp3_linux/Debug/makefile
@@ -23,19 +23,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: tp3_linux
+all: TP3
 
 # Tool invocations
-tp3_linux: $(OBJS) $(USER_OBJS)
+TP3: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C Linker'
-	gcc  -o "tp3_linux" $(OBJS) $(USER_OBJS) $(LIBS) /home/alumno/AAAAAAAAAAAAAAAAA/Repo-UTN-Prog-I-2019/tp3_linux/LinkedList.a
+	gcc  -o "TP3" $(OBJS) $(USER_OBJS) $(LIBS) /home/misael/eclipse-workspace/Repo-UTN-Prog-I-2019/tp3_linux/LinkedList.a
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(EXECUTABLES)$(OBJS)$(C_DEPS) tp3_linux
+	-$(RM) $(EXECUTABLES)$(OBJS)$(C_DEPS) TP3
 	-@echo ' '
 
 .PHONY: all clean dependents
